Changed GP to handle new type of data, still some work to do to the rainfall amount to make sure it compiles